Source/Alternet.UI.Pal/Api/Image.Api.h

using namespace Alternet::UI;
ALTERNET_UI_API Image* Image_Create_()
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<Image*>([&](){
    #endif
        return new Image();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_GetHasMask_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetHasMask();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API float Image_GetScaleFactor_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<float>([&](){
    #endif
        return obj->GetScaleFactor();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void Image_SetScaleFactor_(Image* obj, float value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetScaleFactor(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API SizeI_C Image_GetDipSize_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<SizeI_C>([&](){
    #endif
        return obj->GetDipSize();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API float Image_GetScaledHeight_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<float>([&](){
    #endif
        return obj->GetScaledHeight();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API SizeI_C Image_GetScaledSize_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<SizeI_C>([&](){
    #endif
        return obj->GetScaledSize();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API float Image_GetScaledWidth_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<float>([&](){
    #endif
        return obj->GetScaledWidth();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API SizeI_C Image_GetPixelSize_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<SizeI_C>([&](){
    #endif
        return obj->GetPixelSize();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_GetIsOk_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetIsOk();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_GetHasAlpha_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetHasAlpha();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void Image_SetHasAlpha_(Image* obj, c_bool value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetHasAlpha(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API int Image_GetPixelWidth_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetPixelWidth();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API int Image_GetPixelHeight_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetPixelHeight();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API int Image_GetDepth_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetDepth();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API int Image_GetStaticOption_(int objectId, int propId)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<int>([&](){
    #endif
        return Image::GetStaticOption(objectId, propId);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void Image_Log_()
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        Image::Log();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_InitializeFromDipSize_(Image* obj, int width, int height, float scale, int depth)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->InitializeFromDipSize(width, height, scale, depth);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_InitializeFromScreen_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->InitializeFromScreen();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_LoadFromStream_(Image* obj, void* stream)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->LoadFromStream(stream);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_LoadSvgFromStream_(Image* obj, void* stream, int width, int height, Color color)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->LoadSvgFromStream(stream, width, height, color);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_LoadSvgFromString_(Image* obj, const char16_t* s, int width, int height, Color color)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->LoadSvgFromString(s, width, height, color);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void Image_Initialize_(Image* obj, SizeI size, int depth)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->Initialize(size, depth);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void Image_InitializeFromImage_(Image* obj, Image* source, SizeI size)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->InitializeFromImage(source, size);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void Image_CopyFrom_(Image* obj, Image* otherImage)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->CopyFrom(otherImage);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_SaveToStream_(Image* obj, void* stream, const char16_t* format)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->SaveToStream(stream, format);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_SaveToFile_(Image* obj, const char16_t* fileName)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->SaveToFile(fileName);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* Image_ConvertToGenericImage_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->ConvertToGenericImage();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void Image_LoadFromGenericImage_(Image* obj, void* image, int depth)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->LoadFromGenericImage(image, depth);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_GrayScale_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GrayScale();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_ResetAlpha_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->ResetAlpha();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_LoadFile_(Image* obj, const char16_t* name, int type)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->LoadFile(name, type);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_SaveFile_(Image* obj, const char16_t* name, int type)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->SaveFile(name, type);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_SaveStream_(Image* obj, void* stream, int type)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->SaveStream(stream, type);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_LoadStream_(Image* obj, void* stream, int type)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->LoadStream(stream, type);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API Image* Image_GetSubBitmap_(Image* obj, RectI rect)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<Image*>([&](){
    #endif
        return obj->GetSubBitmap(rect);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API Image* Image_ConvertToDisabled_(Image* obj, uint8_t brightness)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<Image*>([&](){
    #endif
        return obj->ConvertToDisabled(brightness);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool Image_Rescale_(Image* obj, SizeI sizeNeeded)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->Rescale(sizeNeeded);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API int Image_GetDefaultBitmapType_()
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<int>([&](){
    #endif
        return Image::GetDefaultBitmapType();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* Image_LockBits_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->LockBits();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API int Image_GetStride_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetStride();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void Image_UnlockBits_(Image* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->UnlockBits();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}